--- a/assets/style.css
+++ b/assets/style.css
@@ -1,105 +1,105 @@
-.mcc-box__field-container {
-	margin-bottom: 16px;
+.wp-toolkit__field-container {
+  margin-bottom: 16px;
 }
 
-.mcc-box-clearfix:after {
-	content: "";
-	display: table;
-	clear: both;
+.wp-toolkit-clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.mcc-box__label {
-	display: block;
-	margin-bottom: 4px;
-	font-size: 14px;
+.wp-toolkit__label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 14px;
 }
 
-.mcc-box__checkbox-container .mcc-box__label {
-	display: inline-block;
-    margin-right: 8px;
+.wp-toolkit__checkbox-container .wp-toolkit__label {
+  display: inline-block;
+  margin-right: 8px;
 }
 
-.mcc-box__field-container .mcc-box__field-text,
-.mcc-box__field-container .mcc-box__field-textarea {
-	width: 100%;
+.wp-toolkit__field-container .wp-toolkit__field-text,
+.wp-toolkit__field-container .wp-toolkit__field-textarea {
+  width: 100%;
 }
 
-.mcc-box__field-textarea {
-	min-height: 100px;
+.wp-toolkit__field-textarea {
+  min-height: 100px;
 }
 
-.mcc-box__description {
-	color: #666;
-    font-style: italic;
-    display: block;
-    font-size: 13px;
-    margin: 0 0 4px 0;
+.wp-toolkit__description {
+  color: #666;
+  font-style: italic;
+  display: block;
+  font-size: 13px;
+  margin: 0 0 4px 0;
 }
 
-.mcc-box__image-preview {
-	width: 150px;
-    display: block;
-    margin-bottom: 8px;
+.wp-toolkit__image-preview {
+  width: 150px;
+  display: block;
+  margin-bottom: 8px;
 }
 
-.mcc-box__image-preview.is-hidden {
-	display: none;
+.wp-toolkit__image-preview.is-hidden {
+  display: none;
 }
 
-.mcc-box-repeated-header {
-	background-color: #008ec2;
-	color: #fff;
-	padding: 8px 12px;
-	cursor: pointer;
+.wp-toolkit-repeated-header {
+  background-color: #008ec2;
+  color: #fff;
+  padding: 8px 12px;
+  cursor: pointer;
 }
 
 .repeated-header__title,
 .repeated-header__nav {
-	margin: 5px 0 0 0;
+  margin: 5px 0 0 0;
 }
 
-.mcc-box-repeated-header a {
-	color: #fff;
-	cursor: pointer;
-	padding: 5px;
+.wp-toolkit-repeated-header a {
+  color: #fff;
+  cursor: pointer;
+  padding: 5px;
 }
 
-.mcc-box-repeated-header a:hover {
-	color: #ddd;
+.wp-toolkit-repeated-header a:hover {
+  color: #ddd;
 }
 
 .repeated-header__nav {
-	text-align: right;
+  text-align: right;
 }
 
 .repeated-header__nav li {
-	display: inline-block;
+  display: inline-block;
 }
 
-.mcc-box__repeated {
-	margin-bottom: 12px;
+.wp-toolkit__repeated {
+  margin-bottom: 12px;
 }
 
-.mcc-box__repeated-content {
-	border: 1px solid #ddd;
-	background-color: #f5f5f5;
-	padding: 12px;
-	margin: 0 0 12px 0;
+.wp-toolkit__repeated-content {
+  border: 1px solid #ddd;
+  background-color: #f5f5f5;
+  padding: 12px;
+  margin: 0 0 12px 0;
 }
 
-.mcc-box__repeated-content.is-hidden {
-	display: none;
+.wp-toolkit__repeated-content.is-hidden {
+  display: none;
 }
 
-.mcc-box__add span {
-	margin-top: 4px;
+.wp-toolkit__add span {
+  margin-top: 4px;
 }
 
-.mcc-box-col {
-	display: block;
-	float: left;
+.wp-toolkit-col {
+  display: block;
+  float: left;
 }
 
-.mcc-box-col-6 {
-	width: 50%;
+.wp-toolkit-col-6 {
+  width: 50%;
 }
